feat: header of home page complete

--- a/home.html
+++ b/home.html
@@ -4,6 +4,60 @@
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <title>Document</title>
+      <link rel="stylesheet" href="./css/fonts.css" />
+      <link rel="stylesheet" href="./css/default.css" />
+      <link rel="stylesheet" href="./css/main.css" />
    </head>
-   <body></body>
+   <body>
+      <header class="home-header">
+         <nav class="home-nav-menu">
+            <div class="burger-btn">
+               <img class="svg-class" src="./assets/icon/Button (6).svg" alt="" />
+            </div>
+            <div class="logo-icon">
+               <img src="./assets/icon/Logo_Apriori.svg" alt="" />
+            </div>
+            <ul class="nav-buttons">
+               <li><img src="./assets/icon/Button (5).svg" alt="" /></li>
+               <li><img src="./assets/icon/Button (2).svg" alt="" /></li>
+               <li><img src="./assets/icon/Button (3).svg" alt="" /></li>
+               <li><img src="./assets/icon/Button (4).svg" alt="" /></li>
+            </ul>
+         </nav>
+
+         <div class="title-box">
+            <h1 class="title-home">
+               Винтажные аксессуары <br />
+               для дома и офиса
+            </h1>
+            <div class="video-preview">
+               <img class="play-btn-home-preview" src="./assets/icon/Play.svg" alt="" />
+            </div>
+         </div>
+         <div class="line">
+            <img src="./assets/icon/Rectangle 1860.svg" alt="" />
+            <p class="line_line"></p>
+         </div>
+         <p class="subtitle-home">
+            Предметы интерьера, антикварные <br />
+            и винтажные аксессуары по выгодной цене.
+         </p>
+      </header>
+      <main>
+         <section class="catalog-of-goods-home">
+            <h2 class="h2-section">Каталог товаров</h2>
+            <div class="catalog-home-blocks">
+               <div class="catalog-home-block-1">
+                  <p class="type-of-thing-home">Тип товаров интерьера</p>
+                  <div>
+                     <h3 class="name-of-thing-home">Часы</h3>
+                     <img src="./assets/icon/Rectangle 1860.svg" alt="" />
+                     <p class="line_line"></p>
+                     <img src="/assets/icon/Button.svg" alt="" />
+                  </div>
+               </div>
+            </div>
+         </section>
+      </main>
+   </body>
 </html>
