feat: complete first section (catalog of things in main page)

--- a/home.html
+++ b/home.html
@@ -47,14 +47,74 @@
          <section class="catalog-of-goods-home">
             <h2 class="h2-section">Каталог товаров</h2>
             <div class="catalog-home-blocks">
-               <div class="catalog-home-block-1">
+               <div class="bg-block-correct-position catalog-home-block-1">
                   <p class="type-of-thing-home">Тип товаров интерьера</p>
-                  <div>
+                  <div class="flex-in-catalog-block">
                      <h3 class="name-of-thing-home">Часы</h3>
-                     <img src="./assets/icon/Rectangle 1860.svg" alt="" />
-                     <p class="line_line"></p>
+                     <div class="line-into-block">
+                        <img src="./assets/icon/Rectangle 1860.svg" alt="" />
+                        <p class="line_line"></p>
+                     </div>
                      <img src="/assets/icon/Button.svg" alt="" />
                   </div>
+               </div>
+               <div class="bg-block-correct-position catalog-home-block-2">
+                  <p class="type-of-thing-home">Тип товаров интерьера</p>
+                  <div class="flex-in-catalog-block">
+                     <h3 class="name-of-thing-home">Зеркала</h3>
+                     <div class="line-into-block">
+                        <img src="./assets/icon/Rectangle 1860.svg" alt="" />
+                        <p class="line_line"></p>
+                     </div>
+                     <img src="/assets/icon/Button.svg" alt="" />
+                  </div>
+               </div>
+               <div class="bg-block-correct-position catalog-home-block-3">
+                  <p class="type-of-thing-home">Тип товаров интерьера</p>
+                  <div class="flex-in-catalog-block">
+                     <h3 class="name-of-thing-home">Вазы</h3>
+                     <div class="line-into-block">
+                        <img src="./assets/icon/Rectangle 1860.svg" alt="" />
+                        <p class="line_line"></p>
+                     </div>
+                     <img src="/assets/icon/Button.svg" alt="" />
+                  </div>
+               </div>
+               <div class="bg-block-correct-position catalog-home-block-4">
+                  <p class="type-of-thing-home">Тип товаров интерьера</p>
+                  <div class="flex-in-catalog-block">
+                     <h3 class="name-of-thing-home">Картины и панно</h3>
+                     <div class="line-into-block">
+                        <img src="./assets/icon/Rectangle 1860.svg" alt="" />
+                        <p class="line_line"></p>
+                     </div>
+                     <img src="/assets/icon/Button.svg" alt="" />
+                  </div>
+               </div>
+               <div class="last-block-in-catalog-goods-home">
+                  <div class="bg-block-correct-position catalog-home-block-5">
+                     <p class="type-of-thing-home">Тип товаров интерьера</p>
+                     <div class="flex-in-catalog-block">
+                        <h3 class="name-of-thing-home">Ковры</h3>
+                        <div class="line-into-block">
+                           <img src="./assets/icon/Rectangle 1860.svg" alt="" />
+                           <p class="line_line"></p>
+                        </div>
+                        <img src="/assets/icon/Button.svg" alt="" />
+                     </div>
+                  </div>
+                  <div class="bg-block-correct-position catalog-home-block-6">
+                     <p class="type-of-thing-home">Тип товаров интерьера</p>
+                     <div class="flex-in-catalog-block">
+                        <h3 class="name-of-thing-home">Декор</h3>
+                        <div class="line-into-block">
+                           <img src="./assets/icon/Rectangle 1860.svg" alt="" />
+                           <p class="line_line"></p>
+                        </div>
+                        <img src="/assets/icon/Button.svg" alt="" />
+                     </div>
+                  </div>
+                  <div class="red-circle">Каталог</div>
                </div>
             </div>
          </section>
