--- a/home.html
+++ b/home.html
@@ -44,7 +44,7 @@
          </p>
       </header>
       <main>
-         <section class="catalog-of-goods-home">
+         <section class="section-default-home">
             <h2 class="h2-section">Каталог товаров</h2>
             <div class="catalog-home-blocks">
                <div class="bg-block-correct-position catalog-home-block-1">
@@ -118,6 +118,84 @@
                </div>
             </div>
          </section>
+         <section class="section-default-home">
+            <h2 class="h2-section">Готовые коллекции <br />и решения</h2>
+
+            <div class="panel-container">
+               <div class="panel active" style="background-image: url('./assets/content/Rectangle\ 1537\ \(1\).png')"></div>
+               <div class="panel" style="background-image: url('./assets/content/3-4\ 1.png')"></div>
+               <div class="panel" style="background-image: url('./assets/content/1679107618_design-pibig-info-p-pol-v-skandinavskom-interere-dizain-pinter-6\ 1.png')"></div>
+               <div class="panel" style="background-image: url('./assets/content/Rectangle\ 1539.png')"></div>
+               <div class="panel" style="background: black"></div>
+            </div>
+         </section>
+
+         <section class="section-default-home">
+            <h2 class="h2-section">Уникальные товары <br />и эксклюзив</h2>
+            <div class="product-cards-overflow-container">
+               <div class="product-cards-container">
+                  <div class="product-card">
+                     <div class="product-card-image" style="background-image: url('./assets/content/Rectangle\ 1532.png')">
+                        <img class="product-card_like-btn" src="./assets/icon/Button (2).svg" alt="" />
+                     </div>
+                     <div class="product-card_discription">
+                        <div class="product-card_top-discr">
+                           <p class="product-card_name">Стекляная ваза Braun</p>
+                           <p class="product-card_price">16 800 <span>₽</span></p>
+                        </div>
+                        <div class="product-card_subdiscr">36 см | Настольная</div>
+                     </div>
+                  </div>
+
+                  <div class="product-card">
+                     <div class="product-card-image" style="background-image: url('./assets/content/79763\ 1.png')">
+                        <img class="product-card_like-btn" src="./assets/icon/Button (2).svg" alt="" />
+                     </div>
+                     <div class="product-card_discription">
+                        <div class="product-card_top-discr">
+                           <p class="product-card_name">Зеркало Лучи солнца</p>
+                           <p class="product-card_price">45 900 <span>₽</span></p>
+                        </div>
+                        <div class="product-card_subdiscr">89 см | Золотое</div>
+                     </div>
+                  </div>
+
+                  <div class="product-card">
+                     <div class="product-card-image" style="background-image: url('./assets/content/Rectangle\ 1533.png')">
+                        <img class="product-card_like-btn" src="./assets/icon/Button (2).svg" alt="" />
+                     </div>
+                     <div class="product-card_discription">
+                        <div class="product-card_top-discr">
+                           <p class="product-card_name">Статуэтка Икар</p>
+                           <p class="product-card_price">6 400 <span>₽</span></p>
+                        </div>
+                        <div class="product-card_subdiscr">56 см | Фарфор</div>
+                     </div>
+                  </div>
+
+                  <div class="product-card">
+                     <div class="product-card-image" style="background-image: url('./assets/content/Rectangle\ 1532.png')">
+                        <img class="product-card_like-btn" src="./assets/icon/Button (2).svg" alt="" />
+                     </div>
+                     <div class="product-card_discription">
+                        <div class="product-card_top-discr">
+                           <p class="product-card_name">Стекляная ваза Braun</p>
+                           <p class="product-card_price">16 800 <span>₽</span></p>
+                        </div>
+                        <div class="product-card_subdiscr">36 см | Настольная</div>
+                     </div>
+                  </div>
+               </div>
+            </div>
+            <div class="third-section-control-panel">
+               <img src="./assets/icon/Frame 482379.svg" alt="" />
+               <div class="control-panel_pag-btns">
+                  <img class="control-panel_prev-btn unactive" src="./assets/icon/Button (7).svg" alt="" />
+                  <img class="control-panel_next-btn" src="./assets/icon/Button (7).svg" alt="" />
+               </div>
+            </div>
+         </section>
       </main>
    </body>
+   <script src="./js/index.js"></script>
 </html>
