--- a/home.html
+++ b/home.html
@@ -195,6 +195,33 @@
                </div>
             </div>
          </section>
+
+         <section class="section-default-home">
+            <h2 class="h2-section">Наши социальные сети</h2>
+
+            <div class="social-webs-flex">
+               <div class="social-webs-flex_img" style="background-image: url(./assets/content/social-w-1.png)"></div>
+               <div class="social-webs-flex_img" style="background-image: url(./assets/content/social-w-2.png)"></div>
+               <div class="social-webs-flex_img" style="background-image: url(./assets/content/social-w-3.png)"></div>
+               <div class="social-webs-flex_img" style="background-image: url(./assets/content/social-w-4.png)"></div>
+               <div class="social-webs-flex_img" style="background-image: url(./assets/content/social-w-5.png)"></div>
+               <div class="social-webs-flex_img" style="background-image: url(./assets/content/social-w-6.png)"></div>
+               <div class="social-webs-flex_img" style="background-image: url(./assets/content/social-w-7.png)"></div>
+               <div class="social-webs-flex_img" style="background-image: url(./assets/content/social-w-8.png)"></div>
+               <div class="social-webs-flex_img" style="background-image: url(./assets/content/social-w-9.png)"></div>
+               <div class="social-webs-flex_img" style="background-image: url(./assets/content/social-w-10.png)"></div>
+               <div class="social-webs-flex_last" style="background-image: url(./assets/icon/ramka-pilyastra.svg)">
+                  <div class="social-webs-flex_content">
+                     <div class="content_links"><img src="./assets/icon/telegram-1 3.svg" alt="" /></div>
+                     <span class="s-w-line"></span>
+                     <div class="content_links"><img src="./assets/icon/telegram-1 4.svg" alt="" /></div>
+                     <span class="s-w-line"></span>
+                     <div class="content_links"><img src="./assets/icon/telegram-1 1.svg" alt="" /></div>
+                  </div>
+                  <div class="content_sub-text">Подписывайтесь</div>
+               </div>
+            </div>
+         </section>
       </main>
    </body>
    <script src="./js/index.js"></script>
