--- a/home.html
+++ b/home.html
@@ -222,6 +222,119 @@
                </div>
             </div>
          </section>
+         <section class="section-default-home">
+            <h2 class="h2-section">Отзывы</h2>
+            <div class="reviews-and-leave-feedback-flex">
+               <div class="reviews-container">
+                  <div class="review-card">
+                     <div class="review_top-block">
+                        <div class="review_name">Анна Н.</div>
+                        <div class="review_stars">
+                           <img src="./assets/icon/star-review.svg" alt="" />
+                           <img src="./assets/icon/star-review.svg" alt="" />
+                           <img src="./assets/icon/star-review.svg" alt="" />
+                           <img src="./assets/icon/star-review.svg" alt="" />
+                           <img src="./assets/icon/star-review.svg" alt="" />
+                        </div>
+                     </div>
+                     <div class="review_date">Неделю назад</div>
+                     <div class="review_content">Хочу поблагодарить компанию Apriori за качество продукции, а её сотрудников - за компетентность, трудолюбие, достойный сервис доброжелательность.</div>
+                  </div>
+                  <div class="review-card">
+                     <div class="review_top-block">
+                        <div class="review_name">Константин В.</div>
+                        <div class="review_stars">
+                           <img src="./assets/icon/star-review.svg" alt="" />
+                           <img src="./assets/icon/star-review.svg" alt="" />
+                           <img src="./assets/icon/star-review.svg" alt="" />
+                           <img src="./assets/icon/star-review.svg" alt="" />
+                           <img src="./assets/icon/star-review.svg" alt="" />
+                        </div>
+                     </div>
+                     <div class="review_date">2 недели назад</div>
+                     <div class="review_content">
+                        Заказала в этом магазине предметы для дома. Качество выше всяких похвал. Когда рассматриваю строчки и качество выполнения и всех деталей -дух захватывает. Браво!!! Качественные
+                        материалы, никаких повреждений. Большая благодарность менеджерам в магазине. С вниманием и любовью относятся к покупателям! Упаковка бережная, всё цело.
+                     </div>
+                     <a class="link-to-full-review" href="">Посмотреть весь отзыв</a>
+                  </div>
+                  <div class="review-card">
+                     <div class="review_top-block">
+                        <div class="review_name">Вероника П.</div>
+                        <div class="review_stars">
+                           <img src="./assets/icon/star-review.svg" alt="" />
+                           <img src="./assets/icon/star-review.svg" alt="" />
+                           <img src="./assets/icon/star-review.svg" alt="" />
+                           <img src="./assets/icon/star-review.svg" alt="" />
+                           <!-- <img src="./assets/icon/star-review.svg" alt="" /> -->
+                        </div>
+                     </div>
+                     <div class="review_date">месяц назад</div>
+                     <div class="review_content">
+                        Хорошее и красивое зеркало, но коробка была помята. Не очень приятно получать новый товар с такими дефектами. Курьер как обычно быстро занёс в квартиру и убежал, не оставив
+                        время на проверку товара, а зря я бы с ним и отправил ее обратно!
+                     </div>
+                  </div>
+               </div>
+               <div class="right-zone-review">
+                  <div class="get-review">
+                     <div class="leave-feedback-top-line">
+                        <div class="review_name">157 оценок</div>
+                        <div class="feedback-middle-score">4,8</div>
+                        <img src="./assets/icon/star-rectangle.svg" alt="" />
+                     </div>
+                     <ul class="score-counter">
+                        <li>
+                           <span class="score-counter_starvalue">5</span>
+                           <img src="./assets/icon/star-review.svg" alt="" />
+                           <div class="review-walue-bar">
+                              <p class="review-walue-bar_status-5"></p>
+                           </div>
+                           <span class="score-counter_counter">107</span>
+                        </li>
+                        <li>
+                           <span class="score-counter_starvalue">4</span>
+                           <img src="./assets/icon/star-review.svg" alt="" />
+                           <div class="review-walue-bar">
+                              <p class="review-walue-bar_status-4"></p>
+                           </div>
+                           <span class="score-counter_counter">50</span>
+                        </li>
+                        <li>
+                           <span class="score-counter_starvalue opacity">3</span>
+                           <img src="./assets/icon/star-grey.svg" alt="" />
+                           <div class="review-walue-bar">
+                              <img src="./assets/icon/Rectangle-grey.svg" alt="" />
+                           </div>
+                           <span class="score-counter_counter opacity">0</span>
+                        </li>
+                        <li>
+                           <span class="score-counter_starvalue opacity">2</span>
+                           <img src="./assets/icon/star-grey.svg" alt="" />
+                           <div class="review-walue-bar">
+                              <img src="./assets/icon/Rectangle-grey.svg" alt="" />
+                           </div>
+                           <span class="score-counter_counter opacity">0</span>
+                        </li>
+                        <li>
+                           <span class="score-counter_starvalue opacity">1 </span>
+                           <img src="./assets/icon/star-grey.svg" alt="" />
+                           <div class="review-walue-bar">
+                              <img src="./assets/icon/Rectangle-grey.svg" alt="" />
+                           </div>
+                           <span class="score-counter_counter opacity">0</span>
+                        </li>
+                     </ul>
+                     <div class="leave-feedback-text">Вы можете оставить отзыв</div>
+                     <div class="leave-feedback-btn">Оставить отзыв</div>
+                  </div>
+                  <div class="control-panel_pag-btns">
+                     <img class="control-panel_prev-btn" src="./assets/icon/Button (7).svg" alt="" />
+                     <img class="control-panel_next-btn" src="./assets/icon/Button (7).svg" alt="" />
+                  </div>
+               </div>
+            </div>
+         </section>
       </main>
    </body>
    <script src="./js/index.js"></script>
