--- a/home.html
+++ b/home.html
@@ -44,7 +44,7 @@
          </p>
       </header>
       <main>
-         <section class="catalog-of-goods-home">
+         <section class="section-default-home">
             <h2 class="h2-section">Каталог товаров</h2>
             <div class="catalog-home-blocks">
                <div class="bg-block-correct-position catalog-home-block-1">
@@ -118,6 +118,224 @@
                </div>
             </div>
          </section>
+         <section class="section-default-home">
+            <h2 class="h2-section">Готовые коллекции <br />и решения</h2>
+
+            <div class="panel-container">
+               <div class="panel active" style="background-image: url('./assets/content/Rectangle\ 1537\ \(1\).png')"></div>
+               <div class="panel" style="background-image: url('./assets/content/3-4\ 1.png')"></div>
+               <div class="panel" style="background-image: url('./assets/content/1679107618_design-pibig-info-p-pol-v-skandinavskom-interere-dizain-pinter-6\ 1.png')"></div>
+               <div class="panel" style="background-image: url('./assets/content/Rectangle\ 1539.png')"></div>
+               <div class="panel" style="background: black"></div>
+            </div>
+         </section>
+
+         <section class="section-default-home">
+            <h2 class="h2-section">Уникальные товары <br />и эксклюзив</h2>
+            <div class="product-cards-overflow-container">
+               <div class="product-cards-container">
+                  <div class="product-card">
+                     <div class="product-card-image" style="background-image: url('./assets/content/Rectangle\ 1532.png')">
+                        <img class="product-card_like-btn" src="./assets/icon/Button (2).svg" alt="" />
+                     </div>
+                     <div class="product-card_discription">
+                        <div class="product-card_top-discr">
+                           <p class="product-card_name">Стекляная ваза Braun</p>
+                           <p class="product-card_price">16 800 <span>₽</span></p>
+                        </div>
+                        <div class="product-card_subdiscr">36 см | Настольная</div>
+                     </div>
+                  </div>
+
+                  <div class="product-card">
+                     <div class="product-card-image" style="background-image: url('./assets/content/79763\ 1.png')">
+                        <img class="product-card_like-btn" src="./assets/icon/Button (2).svg" alt="" />
+                     </div>
+                     <div class="product-card_discription">
+                        <div class="product-card_top-discr">
+                           <p class="product-card_name">Зеркало Лучи солнца</p>
+                           <p class="product-card_price">45 900 <span>₽</span></p>
+                        </div>
+                        <div class="product-card_subdiscr">89 см | Золотое</div>
+                     </div>
+                  </div>
+
+                  <div class="product-card">
+                     <div class="product-card-image" style="background-image: url('./assets/content/Rectangle\ 1533.png')">
+                        <img class="product-card_like-btn" src="./assets/icon/Button (2).svg" alt="" />
+                     </div>
+                     <div class="product-card_discription">
+                        <div class="product-card_top-discr">
+                           <p class="product-card_name">Статуэтка Икар</p>
+                           <p class="product-card_price">6 400 <span>₽</span></p>
+                        </div>
+                        <div class="product-card_subdiscr">56 см | Фарфор</div>
+                     </div>
+                  </div>
+
+                  <div class="product-card">
+                     <div class="product-card-image" style="background-image: url('./assets/content/Rectangle\ 1532.png')">
+                        <img class="product-card_like-btn" src="./assets/icon/Button (2).svg" alt="" />
+                     </div>
+                     <div class="product-card_discription">
+                        <div class="product-card_top-discr">
+                           <p class="product-card_name">Стекляная ваза Braun</p>
+                           <p class="product-card_price">16 800 <span>₽</span></p>
+                        </div>
+                        <div class="product-card_subdiscr">36 см | Настольная</div>
+                     </div>
+                  </div>
+               </div>
+            </div>
+            <div class="third-section-control-panel">
+               <img src="./assets/icon/Frame 482379.svg" alt="" />
+               <div class="control-panel_pag-btns">
+                  <img class="control-panel_prev-btn unactive" src="./assets/icon/Button (7).svg" alt="" />
+                  <img class="control-panel_next-btn" src="./assets/icon/Button (7).svg" alt="" />
+               </div>
+            </div>
+         </section>
+
+         <section class="section-default-home">
+            <h2 class="h2-section">Наши социальные сети</h2>
+
+            <div class="social-webs-flex">
+               <div class="social-webs-flex_img" style="background-image: url(./assets/content/social-w-1.png)"></div>
+               <div class="social-webs-flex_img" style="background-image: url(./assets/content/social-w-2.png)"></div>
+               <div class="social-webs-flex_img" style="background-image: url(./assets/content/social-w-3.png)"></div>
+               <div class="social-webs-flex_img" style="background-image: url(./assets/content/social-w-4.png)"></div>
+               <div class="social-webs-flex_img" style="background-image: url(./assets/content/social-w-5.png)"></div>
+               <div class="social-webs-flex_img" style="background-image: url(./assets/content/social-w-6.png)"></div>
+               <div class="social-webs-flex_img" style="background-image: url(./assets/content/social-w-7.png)"></div>
+               <div class="social-webs-flex_img" style="background-image: url(./assets/content/social-w-8.png)"></div>
+               <div class="social-webs-flex_img" style="background-image: url(./assets/content/social-w-9.png)"></div>
+               <div class="social-webs-flex_img" style="background-image: url(./assets/content/social-w-10.png)"></div>
+               <div class="social-webs-flex_last" style="background-image: url(./assets/icon/ramka-pilyastra.svg)">
+                  <div class="social-webs-flex_content">
+                     <div class="content_links"><img src="./assets/icon/telegram-1 3.svg" alt="" /></div>
+                     <span class="s-w-line"></span>
+                     <div class="content_links"><img src="./assets/icon/telegram-1 4.svg" alt="" /></div>
+                     <span class="s-w-line"></span>
+                     <div class="content_links"><img src="./assets/icon/telegram-1 1.svg" alt="" /></div>
+                  </div>
+                  <div class="content_sub-text">Подписывайтесь</div>
+               </div>
+            </div>
+         </section>
+         <section class="section-default-home">
+            <h2 class="h2-section">Отзывы</h2>
+            <div class="reviews-and-leave-feedback-flex">
+               <div class="reviews-container">
+                  <div class="review-card">
+                     <div class="review_top-block">
+                        <div class="review_name">Анна Н.</div>
+                        <div class="review_stars">
+                           <img src="./assets/icon/star-review.svg" alt="" />
+                           <img src="./assets/icon/star-review.svg" alt="" />
+                           <img src="./assets/icon/star-review.svg" alt="" />
+                           <img src="./assets/icon/star-review.svg" alt="" />
+                           <img src="./assets/icon/star-review.svg" alt="" />
+                        </div>
+                     </div>
+                     <div class="review_date">Неделю назад</div>
+                     <div class="review_content">Хочу поблагодарить компанию Apriori за качество продукции, а её сотрудников - за компетентность, трудолюбие, достойный сервис доброжелательность.</div>
+                  </div>
+                  <div class="review-card">
+                     <div class="review_top-block">
+                        <div class="review_name">Константин В.</div>
+                        <div class="review_stars">
+                           <img src="./assets/icon/star-review.svg" alt="" />
+                           <img src="./assets/icon/star-review.svg" alt="" />
+                           <img src="./assets/icon/star-review.svg" alt="" />
+                           <img src="./assets/icon/star-review.svg" alt="" />
+                           <img src="./assets/icon/star-review.svg" alt="" />
+                        </div>
+                     </div>
+                     <div class="review_date">2 недели назад</div>
+                     <div class="review_content">
+                        Заказала в этом магазине предметы для дома. Качество выше всяких похвал. Когда рассматриваю строчки и качество выполнения и всех деталей -дух захватывает. Браво!!! Качественные
+                        материалы, никаких повреждений. Большая благодарность менеджерам в магазине. С вниманием и любовью относятся к покупателям! Упаковка бережная, всё цело.
+                     </div>
+                     <a class="link-to-full-review" href="">Посмотреть весь отзыв</a>
+                  </div>
+                  <div class="review-card">
+                     <div class="review_top-block">
+                        <div class="review_name">Вероника П.</div>
+                        <div class="review_stars">
+                           <img src="./assets/icon/star-review.svg" alt="" />
+                           <img src="./assets/icon/star-review.svg" alt="" />
+                           <img src="./assets/icon/star-review.svg" alt="" />
+                           <img src="./assets/icon/star-review.svg" alt="" />
+                           <!-- <img src="./assets/icon/star-review.svg" alt="" /> -->
+                        </div>
+                     </div>
+                     <div class="review_date">месяц назад</div>
+                     <div class="review_content">
+                        Хорошее и красивое зеркало, но коробка была помята. Не очень приятно получать новый товар с такими дефектами. Курьер как обычно быстро занёс в квартиру и убежал, не оставив
+                        время на проверку товара, а зря я бы с ним и отправил ее обратно!
+                     </div>
+                  </div>
+               </div>
+               <div class="right-zone-review">
+                  <div class="get-review">
+                     <div class="leave-feedback-top-line">
+                        <div class="review_name">157 оценок</div>
+                        <div class="feedback-middle-score">4,8</div>
+                        <img src="./assets/icon/star-rectangle.svg" alt="" />
+                     </div>
+                     <ul class="score-counter">
+                        <li>
+                           <span class="score-counter_starvalue">5</span>
+                           <img src="./assets/icon/star-review.svg" alt="" />
+                           <div class="review-walue-bar">
+                              <p class="review-walue-bar_status-5"></p>
+                           </div>
+                           <span class="score-counter_counter">107</span>
+                        </li>
+                        <li>
+                           <span class="score-counter_starvalue">4</span>
+                           <img src="./assets/icon/star-review.svg" alt="" />
+                           <div class="review-walue-bar">
+                              <p class="review-walue-bar_status-4"></p>
+                           </div>
+                           <span class="score-counter_counter">50</span>
+                        </li>
+                        <li>
+                           <span class="score-counter_starvalue opacity">3</span>
+                           <img src="./assets/icon/star-grey.svg" alt="" />
+                           <div class="review-walue-bar">
+                              <img src="./assets/icon/Rectangle-grey.svg" alt="" />
+                           </div>
+                           <span class="score-counter_counter opacity">0</span>
+                        </li>
+                        <li>
+                           <span class="score-counter_starvalue opacity">2</span>
+                           <img src="./assets/icon/star-grey.svg" alt="" />
+                           <div class="review-walue-bar">
+                              <img src="./assets/icon/Rectangle-grey.svg" alt="" />
+                           </div>
+                           <span class="score-counter_counter opacity">0</span>
+                        </li>
+                        <li>
+                           <span class="score-counter_starvalue opacity">1 </span>
+                           <img src="./assets/icon/star-grey.svg" alt="" />
+                           <div class="review-walue-bar">
+                              <img src="./assets/icon/Rectangle-grey.svg" alt="" />
+                           </div>
+                           <span class="score-counter_counter opacity">0</span>
+                        </li>
+                     </ul>
+                     <div class="leave-feedback-text">Вы можете оставить отзыв</div>
+                     <div class="leave-feedback-btn">Оставить отзыв</div>
+                  </div>
+                  <div class="control-panel_pag-btns">
+                     <img class="control-panel_prev-btn" src="./assets/icon/Button (7).svg" alt="" />
+                     <img class="control-panel_next-btn" src="./assets/icon/Button (7).svg" alt="" />
+                  </div>
+               </div>
+            </div>
+         </section>
       </main>
    </body>
+   <script src="./js/index.js"></script>
 </html>
