feat: recent views complete + footer start

--- a/home.html
+++ b/home.html
@@ -335,7 +335,52 @@
                </div>
             </div>
          </section>
+         <section class="section-default-home">
+            <h2 class="h2-section">Просмотренные товары</h2>
+         </section>
+         <div class="viewed-products-container">
+            <div class="viewed-product">
+               <img class="viewed-product_img" src="./assets/content/viewed-product-1.png" alt="" />
+               <p class="viewed-product_name">Зеркало Шахерезада 99 см Настенное</p>
+               <div class="viewed-product_price">
+                  <p class="viewed-product_price-main">38 900 <span>₽</span></p>
+                  <p class="viewed-product_price-sub"></p>
+               </div>
+               <div class="viewed-product_discont-value none"></div>
+            </div>
+            <div class="viewed-product">
+               <img class="viewed-product_img" src="./assets/content/viewed-product-2.png" alt="" />
+               <p class="viewed-product_name">Зеркало Лучи солнца 89 см Золотое</p>
+               <div class="viewed-product_price">
+                  <p class="viewed-product_price-main">45 900 <span>₽</span></p>
+                  <p class="viewed-product_price-sub"></p>
+               </div>
+               <div class="viewed-product_discont-value none">%</div>
+            </div>
+            <div class="viewed-product">
+               <img class="viewed-product_img" src="./assets/content/viewed-product-3.png" alt="" />
+               <p class="viewed-product_name">Тарелка декоративная 41 см 4 вида</p>
+               <div class="viewed-product_price">
+                  <p class="viewed-product_price-main">11 500 <span>₽</span></p>
+                  <p class="viewed-product_price-sub">9200 ₽</p>
+               </div>
+               <div class="viewed-product_discont-value">-25%</div>
+            </div>
+            <div class="viewed-product">
+               <img class="viewed-product_img" src="./assets/content/viewed-product-4.png" alt="" />
+               <p class="viewed-product_name">Лампа настольная Розовый Зефир 63 см</p>
+               <div class="viewed-product_price">
+                  <p class="viewed-product_price-main">29 800 <span>₽</span></p>
+                  <p class="viewed-product_price-sub"></p>
+               </div>
+               <div class="viewed-product_discont-value none"></div>
+            </div>
+         </div>
       </main>
+      <footer>
+         <div class="footer_left-side"></div>
+         <div class="footer_rignt-side"></div>
+      </footer>
    </body>
    <script src="./js/index.js"></script>
 </html>
