--- a/home.html
+++ b/home.html
@@ -335,7 +335,123 @@
                </div>
             </div>
          </section>
+         <section class="section-default-home">
+            <h2 class="h2-section">Просмотренные товары</h2>
+         </section>
+         <div class="viewed-products-container">
+            <div class="viewed-product">
+               <img class="viewed-product_img" src="./assets/content/viewed-product-1.png" alt="" />
+               <p class="viewed-product_name">Зеркало Шахерезада 99 см Настенное</p>
+               <div class="viewed-product_price">
+                  <p class="viewed-product_price-main">38 900 <span>₽</span></p>
+                  <p class="viewed-product_price-sub"></p>
+               </div>
+               <div class="viewed-product_discont-value none"></div>
+            </div>
+            <div class="viewed-product">
+               <img class="viewed-product_img" src="./assets/content/viewed-product-2.png" alt="" />
+               <p class="viewed-product_name">Зеркало Лучи солнца 89 см Золотое</p>
+               <div class="viewed-product_price">
+                  <p class="viewed-product_price-main">45 900 <span>₽</span></p>
+                  <p class="viewed-product_price-sub"></p>
+               </div>
+               <div class="viewed-product_discont-value none">%</div>
+            </div>
+            <div class="viewed-product">
+               <img class="viewed-product_img" src="./assets/content/viewed-product-3.png" alt="" />
+               <p class="viewed-product_name">Тарелка декоративная 41 см 4 вида</p>
+               <div class="viewed-product_price">
+                  <p class="viewed-product_price-main">11 500 <span>₽</span></p>
+                  <p class="viewed-product_price-sub">9200 ₽</p>
+               </div>
+               <div class="viewed-product_discont-value">-25%</div>
+            </div>
+            <div class="viewed-product">
+               <img class="viewed-product_img" src="./assets/content/viewed-product-4.png" alt="" />
+               <p class="viewed-product_name">Лампа настольная Розовый Зефир 63 см</p>
+               <div class="viewed-product_price">
+                  <p class="viewed-product_price-main">29 800 <span>₽</span></p>
+                  <p class="viewed-product_price-sub"></p>
+               </div>
+               <div class="viewed-product_discont-value none"></div>
+            </div>
+         </div>
       </main>
+      <footer>
+         <div class="footer_left-side">
+            <img src="./assets/icon/Logo_Apriori.svg" alt="" style="width: 182px" />
+            <div class="footer_discription">
+               <p><span class="footer_bold-text">APRIORI DESIGN</span> © Все права защищены 2022 — 2023</p>
+               <p>Cтоимость и условия приобретения товара действительны на текущую дату</p>
+            </div>
+         </div>
+         <div class="footer_rignt-side">
+            <div class="footer_rignt__ul-box">
+               <h5 class="footer-title">Интернет-магазин</h5>
+               <ul class="footer-u-list">
+                  <li><a href="">Акции</a></li>
+                  <li><a href="">Все товары</a></li>
+                  <li><a href="">Лояльность</a></li>
+                  <li><a href="">Доставка и оплата</a></li>
+                  <li><a href="">Новости</a></li>
+               </ul>
+            </div>
+            <div class="footer_rignt__ul-box">
+               <h5 class="footer-title">Сервис</h5>
+               <ul class="footer-u-list">
+                  <li><a href="">Помощь</a></li>
+                  <li><a href="">Обратная связь</a></li>
+                  <li><a href="">Адрес магазина</a></li>
+                  <li><a href="">Публичная оферта</a></li>
+               </ul>
+            </div>
+            <div class="line-into-block">
+               <img src="./assets/icon/Rectangle 1860.svg" alt="" />
+               <p class="line_line"></p>
+            </div>
+            <div class="footer_rignt__ul-box">
+               <h5 class="footer-title">Контакты</h5>
+               <ul class="footer-u-list">
+                  <li class="footer-tel"><a href="tel:+79137995306">+7 (913) 799-53-06</a></li>
+                  <li><a href="mailto:info@aprioridecor.ru">info@aprioridecor.ru</a></li>
+               </ul>
+            </div>
+            <div class="footer_rignt__ul-box">
+               <h5 class="footer-title">Компания</h5>
+               <ul class="footer-u-list">
+                  <li><a href="">О нас</a></li>
+                  <li><a href="">Сотрудничество</a></li>
+                  <li><a href="">Проект для вас</a></li>
+                  <li><a href="">Вакансии</a></li>
+               </ul>
+            </div>
+            <ul class="footer-social-webs">
+               <li>
+                  <a href=""><img src="./assets/icon/footer-whatsup.svg" alt="" /></a>
+               </li>
+               <li>
+                  <a href=""><img src="./assets/icon/footer-tg.svg" alt="" /></a>
+               </li>
+               <li>
+                  <a href=""><img src="./assets/icon/footer-ig.svg" alt="" /></a>
+               </li>
+               <li>
+                  <a href=""><img src="./assets/icon/footer-vk.svg" alt="" /></a>
+               </li>
+            </ul>
+            <ul class="footer-payment">
+               <li>
+                  <a href=""><img src="./assets/icon/Mastercard.svg" alt="" /></a>
+               </li>
+               <li>
+                  <a href=""><img src="./assets/icon/Visa.svg" alt="" /></a>
+               </li>
+               <li>
+                  <a href=""><img src="./assets/icon/MIR.svg" alt="" /></a>
+               </li>
+            </ul>
+         </div>
+      </footer>
    </body>
    <script src="./js/index.js"></script>
 </html>
