feat: vertical slider update for hover(not click) and full filling them

--- a/home.html
+++ b/home.html
@@ -122,11 +122,71 @@
             <h2 class="h2-section">Готовые коллекции <br />и решения</h2>
 
             <div class="panel-container">
-               <div class="panel active" style="background-image: url('./assets/content/Rectangle\ 1537\ \(1\).png')"></div>
-               <div class="panel" style="background-image: url('./assets/content/3-4\ 1.png')"></div>
-               <div class="panel" style="background-image: url('./assets/content/1679107618_design-pibig-info-p-pol-v-skandinavskom-interere-dizain-pinter-6\ 1.png')"></div>
-               <div class="panel" style="background-image: url('./assets/content/Rectangle\ 1539.png')"></div>
-               <div class="panel" style="background: black"></div>
+               <div class="panel active" style="background-image: url('./assets/content/Rectangle\ 1537\ \(1\).png')">
+                  <img src="./assets/icon/Rectangle 1860.svg" alt="" style="width: 12px" />
+                  <img class="panel_style-icon" src="./assets/icon/slider-italian.svg" alt="" />
+                  <span class="vertical-line"></span>
+                  <img src="./assets/icon/Rectangle 1860.svg" alt="" style="width: 12px" />
+                  <div class="panel_magic-container">
+                     <p class="panel_magic__point">01</p>
+                     <p class="panel_magic__title">Итальянский стиль</p>
+                     <img class="panel_magic__img" src="./assets/icon/Frame 482335.svg" alt="" />
+                     <p class="panel_magic__disc">Дизайн интерьера в итальянском стиле отсылает к разряду средиземноморских и выражается в сочетании барокко и свободного кантри</p>
+                     <p class="panel_magic__show-collection">Смотреть коллекцию <img src="./assets/icon/arrow-yellow-bg.svg" alt="" /></p>
+                  </div>
+               </div>
+               <div class="panel" style="background-image: url('./assets/content/3-4\ 1.png')">
+                  <img src="./assets/icon/Rectangle 1860.svg" alt="" style="width: 12px" />
+                  <img class="panel_style-icon" src="./assets/icon/slider-italian.svg" alt="" />
+                  <span class="vertical-line"></span>
+                  <img src="./assets/icon/Rectangle 1860.svg" alt="" style="width: 12px" />
+                  <div class="panel_magic-container">
+                     <p class="panel_magic__point">02</p>
+                     <p class="panel_magic__title">Американский лофт</p>
+                     <img class="panel_magic__img" src="./assets/icon/Frame 482335.svg" alt="" />
+                     <p class="panel_magic__disc">Дизайн интерьера в итальянском стиле отсылает к разряду средиземноморских и выражается в сочетании барокко и свободного кантри</p>
+                     <p class="panel_magic__show-collection">Смотреть коллекцию <img src="./assets/icon/arrow-yellow-bg.svg" alt="" /></p>
+                  </div>
+               </div>
+               <div class="panel" style="background-image: url('./assets/content/1679107618_design-pibig-info-p-pol-v-skandinavskom-interere-dizain-pinter-6\ 1.png')">
+                  <img src="./assets/icon/Rectangle 1860.svg" alt="" style="width: 12px" />
+                  <img class="panel_style-icon" src="./assets/icon/slider-italian.svg" alt="" />
+                  <span class="vertical-line"></span>
+                  <img src="./assets/icon/Rectangle 1860.svg" alt="" style="width: 12px" />
+                  <div class="panel_magic-container">
+                     <p class="panel_magic__point">03</p>
+                     <p class="panel_magic__title">Хай-тек</p>
+                     <img class="panel_magic__img" src="./assets/icon/Frame 482335.svg" alt="" />
+                     <p class="panel_magic__disc">Дизайн интерьера в итальянском стиле отсылает к разряду средиземноморских и выражается в сочетании барокко и свободного кантри</p>
+                     <p class="panel_magic__show-collection">Смотреть коллекцию <img src="./assets/icon/arrow-yellow-bg.svg" alt="" /></p>
+                  </div>
+               </div>
+               <div class="panel" style="background-image: url('./assets/content/Rectangle\ 1539.png')">
+                  <img src="./assets/icon/Rectangle 1860.svg" alt="" style="width: 12px" />
+                  <img class="panel_style-icon" src="./assets/icon/slider-italian.svg" alt="" />
+                  <span class="vertical-line"></span>
+                  <img src="./assets/icon/Rectangle 1860.svg" alt="" style="width: 12px" />
+                  <div class="panel_magic-container">
+                     <p class="panel_magic__point">04</p>
+                     <p class="panel_magic__title">Скандинавский стиль</p>
+                     <img class="panel_magic__img" src="./assets/icon/Frame 482335.svg" alt="" />
+                     <p class="panel_magic__disc">Дизайн интерьера в итальянском стиле отсылает к разряду средиземноморских и выражается в сочетании барокко и свободного кантри</p>
+                     <p class="panel_magic__show-collection">Смотреть коллекцию <img src="./assets/icon/arrow-yellow-bg.svg" alt="" /></p>
+                  </div>
+               </div>
+               <div class="panel" style="background: black">
+                  <img src="./assets/icon/Rectangle 1860.svg" alt="" style="width: 12px" />
+                  <img class="panel_style-icon" src="./assets/icon/slider-italian.svg" alt="" />
+                  <span class="vertical-line"></span>
+                  <img src="./assets/icon/Rectangle 1860.svg" alt="" style="width: 12px" />
+                  <div class="panel_magic-container">
+                     <p class="panel_magic__point">Все</p>
+                     <p class="panel_magic__title">Стили</p>
+                     <img class="panel_magic__img" src="./assets/icon/Frame 482335.svg" alt="" />
+                     <p class="panel_magic__disc">Дизайн интерьера в итальянском стиле отсылает к разряду средиземноморских и выражается в сочетании барокко и свободного кантри</p>
+                     <p class="panel_magic__show-collection">Смотреть коллекцию <img src="./assets/icon/arrow-yellow-bg.svg" alt="" /></p>
+                  </div>
+               </div>
             </div>
          </section>
 
@@ -149,7 +209,7 @@
 
                   <div class="product-card">
                      <div class="product-card-image" style="background-image: url('./assets/content/79763\ 1.png')">
-                        <img class="product-card_like-btn" src="./assets/icon/Button (2).svg" alt="" />
+                        <img class="product-card_like-btn" src="./assets/icon/like-black.svg" alt="" />
                      </div>
                      <div class="product-card_discription">
                         <div class="product-card_top-discr">
@@ -162,7 +222,7 @@
 
                   <div class="product-card">
                      <div class="product-card-image" style="background-image: url('./assets/content/Rectangle\ 1533.png')">
-                        <img class="product-card_like-btn" src="./assets/icon/Button (2).svg" alt="" />
+                        <img class="product-card_like-btn" src="./assets/icon/like-black.svg" alt="" />
                      </div>
                      <div class="product-card_discription">
                         <div class="product-card_top-discr">
