feat: adaptive for home page part 1

--- a/home.html
+++ b/home.html
@@ -7,6 +7,7 @@
       <link rel="stylesheet" href="./css/fonts.css" />
       <link rel="stylesheet" href="./css/default.css" />
       <link rel="stylesheet" href="./css/main.css" />
+      <link rel="stylesheet" href="./css/media.css" />
    </head>
    <body>
       <header class="home-header">
@@ -84,7 +85,7 @@
                   <p class="type-of-thing-home">Тип товаров интерьера</p>
                   <div class="flex-in-catalog-block">
                      <h3 class="name-of-thing-home">Картины и панно</h3>
-                     <div class="line-into-block">
+                     <div class="line-into-block less-400">
                         <img src="./assets/icon/Rectangle 1860.svg" alt="" />
                         <p class="line_line"></p>
                      </div>
@@ -285,54 +286,58 @@
          <section class="section-default-home">
             <h2 class="h2-section">Отзывы</h2>
             <div class="reviews-and-leave-feedback-flex">
-               <div class="reviews-container">
-                  <div class="review-card">
-                     <div class="review_top-block">
-                        <div class="review_name">Анна Н.</div>
-                        <div class="review_stars">
-                           <img src="./assets/icon/star-review.svg" alt="" />
-                           <img src="./assets/icon/star-review.svg" alt="" />
-                           <img src="./assets/icon/star-review.svg" alt="" />
-                           <img src="./assets/icon/star-review.svg" alt="" />
-                           <img src="./assets/icon/star-review.svg" alt="" />
+               <div class="reviews-overflow-container">
+                  <div class="reviews-container">
+                     <div class="review-card">
+                        <div class="review_top-block">
+                           <div class="review_name">Анна Н.</div>
+                           <div class="review_stars">
+                              <img src="./assets/icon/star-review.svg" alt="" />
+                              <img src="./assets/icon/star-review.svg" alt="" />
+                              <img src="./assets/icon/star-review.svg" alt="" />
+                              <img src="./assets/icon/star-review.svg" alt="" />
+                              <img src="./assets/icon/star-review.svg" alt="" />
+                           </div>
+                        </div>
+                        <div class="review_date">Неделю назад</div>
+                        <div class="review_content">
+                           Хочу поблагодарить компанию Apriori за качество продукции, а её сотрудников - за компетентность, трудолюбие, достойный сервис доброжелательность.
                         </div>
                      </div>
-                     <div class="review_date">Неделю назад</div>
-                     <div class="review_content">Хочу поблагодарить компанию Apriori за качество продукции, а её сотрудников - за компетентность, трудолюбие, достойный сервис доброжелательность.</div>
-                  </div>
-                  <div class="review-card">
-                     <div class="review_top-block">
-                        <div class="review_name">Константин В.</div>
-                        <div class="review_stars">
-                           <img src="./assets/icon/star-review.svg" alt="" />
-                           <img src="./assets/icon/star-review.svg" alt="" />
-                           <img src="./assets/icon/star-review.svg" alt="" />
-                           <img src="./assets/icon/star-review.svg" alt="" />
-                           <img src="./assets/icon/star-review.svg" alt="" />
+                     <div class="review-card">
+                        <div class="review_top-block">
+                           <div class="review_name">Константин В.</div>
+                           <div class="review_stars">
+                              <img src="./assets/icon/star-review.svg" alt="" />
+                              <img src="./assets/icon/star-review.svg" alt="" />
+                              <img src="./assets/icon/star-review.svg" alt="" />
+                              <img src="./assets/icon/star-review.svg" alt="" />
+                              <img src="./assets/icon/star-review.svg" alt="" />
+                           </div>
                         </div>
-                     </div>
-                     <div class="review_date">2 недели назад</div>
-                     <div class="review_content">
-                        Заказала в этом магазине предметы для дома. Качество выше всяких похвал. Когда рассматриваю строчки и качество выполнения и всех деталей -дух захватывает. Браво!!! Качественные
-                        материалы, никаких повреждений. Большая благодарность менеджерам в магазине. С вниманием и любовью относятся к покупателям! Упаковка бережная, всё цело.
-                     </div>
-                     <a class="link-to-full-review" href="">Посмотреть весь отзыв</a>
-                  </div>
-                  <div class="review-card">
-                     <div class="review_top-block">
-                        <div class="review_name">Вероника П.</div>
-                        <div class="review_stars">
-                           <img src="./assets/icon/star-review.svg" alt="" />
-                           <img src="./assets/icon/star-review.svg" alt="" />
-                           <img src="./assets/icon/star-review.svg" alt="" />
-                           <img src="./assets/icon/star-review.svg" alt="" />
-                           <!-- <img src="./assets/icon/star-review.svg" alt="" /> -->
+                        <div class="review_date">2 недели назад</div>
+                        <div class="review_content">
+                           Заказала в этом магазине предметы для дома. Качество выше всяких похвал. Когда рассматриваю строчки и качество выполнения и всех деталей -дух захватывает. Браво!!!
+                           Качественные материалы, никаких повреждений. Большая благодарность менеджерам в магазине. С вниманием и любовью относятся к покупателям! Упаковка бережная, всё цело.
                         </div>
+                        <a class="link-to-full-review" href="">Посмотреть весь отзыв</a>
                      </div>
-                     <div class="review_date">месяц назад</div>
-                     <div class="review_content">
-                        Хорошее и красивое зеркало, но коробка была помята. Не очень приятно получать новый товар с такими дефектами. Курьер как обычно быстро занёс в квартиру и убежал, не оставив
-                        время на проверку товара, а зря я бы с ним и отправил ее обратно!
+                     <div class="review-card">
+                        <div class="review_top-block">
+                           <div class="review_name">Вероника П.</div>
+                           <div class="review_stars">
+                              <img src="./assets/icon/star-review.svg" alt="" />
+                              <img src="./assets/icon/star-review.svg" alt="" />
+                              <img src="./assets/icon/star-review.svg" alt="" />
+                              <img src="./assets/icon/star-review.svg" alt="" />
+                              <!-- <img src="./assets/icon/star-review.svg" alt="" /> -->
+                           </div>
+                        </div>
+                        <div class="review_date">месяц назад</div>
+                        <div class="review_content">
+                           Хорошее и красивое зеркало, но коробка была помята. Не очень приятно получать новый товар с такими дефектами. Курьер как обычно быстро занёс в квартиру и убежал, не оставив
+                           время на проверку товара, а зря я бы с ним и отправил ее обратно!
+                        </div>
                      </div>
                   </div>
                </div>
@@ -398,42 +403,44 @@
          <section class="section-default-home">
             <h2 class="h2-section">Просмотренные товары</h2>
          </section>
-         <div class="viewed-products-container">
-            <div class="viewed-product">
-               <img class="viewed-product_img" src="./assets/content/viewed-product-1.png" alt="" />
-               <p class="viewed-product_name">Зеркало Шахерезада 99 см Настенное</p>
-               <div class="viewed-product_price">
-                  <p class="viewed-product_price-main">38 900 <span>₽</span></p>
-                  <p class="viewed-product_price-sub"></p>
+         <div class="viewed-products-overflow-container">
+            <div class="viewed-products-container">
+               <div class="viewed-product">
+                  <img class="viewed-product_img" src="./assets/content/viewed-product-1.png" alt="" />
+                  <p class="viewed-product_name">Зеркало Шахерезада 99 см Настенное</p>
+                  <div class="viewed-product_price">
+                     <p class="viewed-product_price-main">38 900 <span>₽</span></p>
+                     <p class="viewed-product_price-sub"></p>
+                  </div>
+                  <div class="viewed-product_discont-value none"></div>
                </div>
-               <div class="viewed-product_discont-value none"></div>
-            </div>
-            <div class="viewed-product">
-               <img class="viewed-product_img" src="./assets/content/viewed-product-2.png" alt="" />
-               <p class="viewed-product_name">Зеркало Лучи солнца 89 см Золотое</p>
-               <div class="viewed-product_price">
-                  <p class="viewed-product_price-main">45 900 <span>₽</span></p>
-                  <p class="viewed-product_price-sub"></p>
+               <div class="viewed-product">
+                  <img class="viewed-product_img" src="./assets/content/viewed-product-2.png" alt="" />
+                  <p class="viewed-product_name">Зеркало Лучи солнца 89 см Золотое</p>
+                  <div class="viewed-product_price">
+                     <p class="viewed-product_price-main">45 900 <span>₽</span></p>
+                     <p class="viewed-product_price-sub"></p>
+                  </div>
+                  <div class="viewed-product_discont-value none">%</div>
                </div>
-               <div class="viewed-product_discont-value none">%</div>
-            </div>
-            <div class="viewed-product">
-               <img class="viewed-product_img" src="./assets/content/viewed-product-3.png" alt="" />
-               <p class="viewed-product_name">Тарелка декоративная 41 см 4 вида</p>
-               <div class="viewed-product_price">
-                  <p class="viewed-product_price-main">11 500 <span>₽</span></p>
-                  <p class="viewed-product_price-sub">9200 ₽</p>
+               <div class="viewed-product">
+                  <img class="viewed-product_img" src="./assets/content/viewed-product-3.png" alt="" />
+                  <p class="viewed-product_name">Тарелка декоративная 41 см 4 вида</p>
+                  <div class="viewed-product_price">
+                     <p class="viewed-product_price-main">11 500 <span>₽</span></p>
+                     <p class="viewed-product_price-sub">9200 ₽</p>
+                  </div>
+                  <div class="viewed-product_discont-value">-25%</div>
                </div>
-               <div class="viewed-product_discont-value">-25%</div>
-            </div>
-            <div class="viewed-product">
-               <img class="viewed-product_img" src="./assets/content/viewed-product-4.png" alt="" />
-               <p class="viewed-product_name">Лампа настольная Розовый Зефир 63 см</p>
-               <div class="viewed-product_price">
-                  <p class="viewed-product_price-main">29 800 <span>₽</span></p>
-                  <p class="viewed-product_price-sub"></p>
+               <div class="viewed-product">
+                  <img class="viewed-product_img" src="./assets/content/viewed-product-4.png" alt="" />
+                  <p class="viewed-product_name">Лампа настольная Розовый Зефир 63 см</p>
+                  <div class="viewed-product_price">
+                     <p class="viewed-product_price-main">29 800 <span>₽</span></p>
+                     <p class="viewed-product_price-sub"></p>
+                  </div>
+                  <div class="viewed-product_discont-value none"></div>
                </div>
-               <div class="viewed-product_discont-value none"></div>
             </div>
          </div>
       </main>
@@ -446,6 +453,7 @@
             </div>
          </div>
          <div class="footer_rignt-side">
+            <img class="footer-less-600 none" src="./assets/icon/Logo_Apriori.svg" alt="" style="width: 182px" />
             <div class="footer_rignt__ul-box">
                <h5 class="footer-title">Интернет-магазин</h5>
                <ul class="footer-u-list">
@@ -510,6 +518,10 @@
                   <a href=""><img src="./assets/icon/MIR.svg" alt="" /></a>
                </li>
             </ul>
+            <div class="footer_discription footer-less-600 none">
+               <p><span class="footer_bold-text">APRIORI DESIGN</span> © Все права защищены 2022 — 2023</p>
+               <p>Cтоимость и условия приобретения товара действительны на текущую дату</p>
+            </div>
          </div>
       </footer>
    </body>
